# openrouter-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/openrouter_mcp/: __init__.py  server.py
