[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-mcp"
version = "1.0.0"
description = "MCP server for OpenRouter model discovery"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Trung Hoang", email = "trung@lumishoang.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["mcp>=1.0.0"]

[project.scripts]
openrouter-mcp = "openrouter_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
